# singleton-cpp

./: CMakeLists.txt  LICENSE.md  Readme.md
example/: CMakeLists.txt  my_dll.cpp  my_dll.h  my_dll_api.h  my_exe.cpp
include/singleton-cpp/: singleton.h  singleton_api.h
src/: CMakeLists.txt  singleton.cpp
